# foxypack-instagram-instagrapy

./: .gitignore  README.md  data.py  instagram_statistics_detailed.xlsx  pyproject.toml  st.py
foxypack_instagram_instagrapy/: __init__.py  answers.py  engine.py  entities.py  foxyanalysis.py  foxystat.py  utils.py
tests/: conftest.py  test_entities.py  test_foxyanalysis.py  test_foxystat.py
